--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,14 @@
         "react/async": "^4.2",
         "bunny/bunny": "@dev",
         "monolog/monolog": "^3.5",
-        "team-reflex/discord-php": "^7.3"
+        "team-reflex/discord-php": "^7.3",
+        "openai-php/client": "^0.8.0",
+        "mehrab-wj/tiktoken-php": "^1.0",
+        "symfony/http-client": "^7.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
